syntax = "proto3";

package abbapb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/abbapb";

import "mir/codegen_extensions.proto";
import "net/codegen_extensions.proto";


// ============================================================
// Events
// ============================================================

message Event {
  option (mir.event_class) = true;

  oneof type {
    option (mir.event_type) = true;

    InputValue    input_value = 1;
    Deliver       deliver     = 2;
    roundpb.Event round       = 3;
  }
}

message InputValue {
  option (mir.event) = true;

  bool input = 1;
}

message Deliver {
  option (mir.event) = true;

  bool   result        = 1;
  string origin_module = 2 [(mir.type) = "github.com/filecoin-project/mir/pkg/types.ModuleID"];
}

// ============================================================
// Messages
// ============================================================

message Message {
  option (net.message_class) = true;

  oneof type {
    option (net.message_type) = true;

    FinishMessage   finish_message = 1;
    roundpb.Message round_message  = 2;
  }
}

message FinishMessage {
  option (net.message) = true;

  bool value = 1;
}
